# s3-inventory.rs

./: .gitignore  Cargo.toml
src/: datafile.rs  main.rs  manifest.rs  types.rs
