[package]
name = "hydra-arch-breakdown"
version = "0.1.0"
authors = ["Graham Christensen <graham@grahamc.com>"]

[profile.dev]
opt-level = 3
debug = true

[dependencies]
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
md5 = "0.6.1"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
cc = "=1.0.26" # cc 1.0.27 doesn't work on rust 1.27.0
csv = "1.0.5"
threadpool = "1.7.1"
